# rustler_live_view_toy

./: .gitignore  .tool-versions  LICENSE.md  README.md  mix.exs
assets/: package-lock.json  package.json  webpack.config.js
assets/css/: app.css  crt.scss  fonts.scss  game.scss  live_view.scss  ui.scss  vars.scss
assets/js/: app.js
assets/js/app/: Hooks.js
assets/js/app/audio/: Audio.js  AudioHooks.js
assets/js/app/input/: Input.js  InputHooks.js
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
lib/: rustler_live_view_toy.ex  rustler_live_view_toy_web.ex
lib/rustler_live_view_toy/: application.ex  repo.ex
lib/rustler_live_view_toy/engine/: engine.ex  tcp.ex
lib/rustler_live_view_toy/supervisor/: supervisor.ex
lib/rustler_live_view_toy_web/: endpoint.ex  gettext.ex  router.ex
lib/rustler_live_view_toy_web/live/: audio_live.ex  game_live.ex  graphics_live.ex  input_live.ex
lib/rustler_live_view_toy_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
native/rustler_live_view_toy_engine/: Cargo.toml  README.md
native/rustler_live_view_toy_engine/src/: constants.rs  lib.rs
native/rustler_live_view_toy_engine/src/tasks/: clients.rs
native/rustler_live_view_toy_engine/src/types/: avatars.rs  channel.rs  client.rs  config.rs  entity.rs  mod.rs  session.rs
priv/repo/: seeds.exs
test/: test_helper.exs
test/rustler_live_view_toy_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
(+7 files in other folders)
