[package]
name = "rustler_live_view_toy_engine"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "rustler_live_view_toy_engine"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
bytes = "0.4.12"
fps_clock = "2.0.0"
futures = "0.1.20"
lazy_static = "1.0"
ncollide2d = "0.20.1"
rand = "0.7"
rustler = "0.21.0"
rustler_codegen = "0.21.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
tokio = "0.1"
